[project]
name = "ulid-transform"
version = "1.5.1"
license = "MIT"
description = "Create and transform ULIDs"
readme = "README.md"
authors = [{ name = "J. Nick Koston", email = "nick@koston.org" }]
requires-python = ">=3.11"

[project.urls]
"Repository" = "https://github.com/bluetooth-devices/ulid-transform"
"Bug Tracker" = "https://github.com/bluetooth-devices/ulid-transform/issues"
"Changelog" = "https://github.com/bluetooth-devices/ulid-transform/blob/main/CHANGELOG.md"

[tool.poetry]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "ulid_transform", from = "src" },
]

[tool.poetry.build]
generate-setup-file = true
script = "build_ext.py"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = ">=7,<9"
pytest-cov = ">=3,<8"
Cython = ">=3.0.5"
setuptools = ">=65.4.1,<80.0.0"
pytest-codspeed = ">=3.1.2,<5.0.0"


[tool.poetry.group.benchmark.dependencies]
ulid-py = "^1.1.0"
ulid2 = "^0.3.0"
pytest-benchmark = ">=4,<6"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "src/ulid_transform/__init__.py:__version__",
]
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "bench.*"
allow_untyped_defs = true

[tool.ruff.lint]
extend-select = [
    "B",
    "I",
    "S",
    "UP",
]

[tool.ruff.lint.isort]
known-first-party = ["ulid_transform", "tests"]

[tool.ruff.lint.per-file-ignores]
"bench/*" = ["S101"]
"tests/*" = ["S101"]

[build-system]
requires = ['setuptools>=77.0', 'Cython>=3.0.2', "poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"
