[project]
name = "ulid-transform"
version = "2.2.9"
license = "MIT"
description = "Create and transform ULIDs"
readme = "README.md"
authors = [{ name = "J. Nick Koston", email = "nick@koston.org" }]
requires-python = ">=3.11"

[project.urls]
"Repository" = "https://github.com/bluetooth-devices/ulid-transform"
"Bug Tracker" = "https://github.com/bluetooth-devices/ulid-transform/issues"
"Changelog" = "https://github.com/bluetooth-devices/ulid-transform/blob/main/CHANGELOG.md"

[tool.poetry]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "ulid_transform", from = "src" },
]
include = [
    { path = "src/ulid_transform/*.so", format = "wheel" },
    { path = "src/ulid_transform/*.pyd", format = "wheel" },
]

[tool.poetry.build]
generate-setup-file = false
script = "build_ext.py"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.1.0,<10"
pytest-cov = ">=3,<8"
setuptools = ">=65.4.1,<83.0.0"
pytest-codspeed = ">=5.0.3,<6.0.0"


[tool.poetry.group.benchmark.dependencies]
ulid-py = "^1.1.0"
ulid2 = "^0.3.0"
pytest-benchmark = ">=4,<6"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "src/ulid_transform/__init__.py:__version__",
]
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "bench.*"
allow_untyped_defs = true

[tool.ruff]
required-version = ">=0.5.0"
target-version = "py311"

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ARG",   # flake8-unused-arguments
    "ASYNC", # async rules
    "B",     # flake8-bugbear
    "BLE",   # flake8-blind-except
    "C4",    # flake8-comprehensions
    "C90",   # mccabe complexity
    "DTZ",   # flake8-datetimez
    "E",     # pycodestyle
    "EM",    # flake8-errmsg
    "ERA",   # eradicate (commented-out code)
    "EXE",   # flake8-executable
    "F",     # pyflakes/autoflake
    "FA",    # flake8-future-annotations
    "FIX",   # flake8-fixme
    "FLY",   # flynt
    "FURB",  # refurb
    "G",     # flake8-logging-format
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "INP",   # flake8-no-pep420 (implicit namespace packages)
    "ISC",   # flake8-implicit-str-concat
    "LOG",   # flake8-logging
    "N",     # pep8-naming
    "NPY",   # numpy-specific rules
    "PERF",  # Perflint
    "PGH",   # pygrep-hooks
    "PIE",   # flake8-pie
    "PL",    # pylint
    "PT",    # flake8-pytest-style
    "PTH",   # flake8-use-pathlib
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "UP",    # pyupgrade
    "RET",   # flake8-return
    "RSE",   # flake8-raise
    "RUF",   # ruff
    "S",     # flake8-bandit
    "SIM",   # flake8-SIM
    "SLF",   # flake8-self
    "SLOT",  # flake8-slots
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "TC",    # flake8-type-checking
    "TD",    # flake8-todos
    "TID",   # Tidy imports
    "TRY",   # try rules
    "W",     # pycodestyle warnings
    "YTT",   # flake8-2020
]

ignore = [
    "ASYNC109", # `timeout` parameters are part of the public async API
    "E501",     # line too long
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments to function call
    "PLR0915",  # Too many statements
    "PLR2004",  # Magic value used in comparison
    "PLW2901",  # Outer variable overwritten by inner target
    "TRY003",   # Avoid specifying long messages outside the exception class
    "TID252",   # Prefer absolute imports over relative imports from parent modules
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["ulid_transform", "tests"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"bench/*" = ["S101", "SLF", "T20"]
"tests/*" = ["ARG", "S101", "S106", "S311", "SLF"]

[build-system]
requires = ['setuptools>=77.0', "poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"
